welcome.lessons.welcome.loopdowhile.Poucet2.scala.error
Poucet:13: error: not found: value a
  nbr=a      
      ^Poucet:16: error: not found: value a
  if (a>=3) {gauche()}
      ^